--- a/corona.html
+++ b/corona.html
@@ -19,19 +19,41 @@
 <body>
     <div class="container">
         <h1>COVID-19 daily stats</h1>
-        <div class="controls">
-            <div class="btnContainer">
-                <button class="btnCSV btn btn-outline-warning active" data-state="are confirmed cases" data-file="confirmed">Confirmed</button>
-                <button class="btnCSV btn btn-outline-danger" data-state="are dead" data-file="deaths">Deaths</button>
-                <button class="btnCSV btn btn-outline-success" data-state="have recovered" data-file="recovered">Recovered</button>
-                <button class="btnCSV btn btn-outline-primary" data-state="are active cases" data-file="active">Active</button>
-            </div>
+        <form action="javascript:void(0);">
+            <div class="controls form-group">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="btnContainer form-row justify-content-center">
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-warning active" data-state="are confirmed cases" data-file="confirmed">Confirmed</button>
+                            </div>
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-danger" data-state="are dead" data-file="deaths">Deaths</button>
+                            </div>
 
-            <div class="scaleContainer">
-                <button class="btn btn-sm btnScale btn-outline-primary active" data-scale="linear">Linear</button>
-                <button class="btn btn-sm btnScale btn-outline-primary" data-scale="logarithmic">Logarithmic</button>
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-success" data-state="have recovered" data-file="recovered">Recovered</button>
+                            </div>
+
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-primary" data-state="are active cases" data-file="active">Active</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+
+                        <div class="scaleContainer form-group form-row justify-content-end">
+                            <div class="col-6 col-lg-3">
+                                <button class="btn btn-sm btnScale btn-outline-primary active" data-scale="linear">Linear</button>
+                            </div>
+                            <div class="col-6 col-lg-3">
+                                <button class="btn btn-sm btnScale btn-outline-primary" data-scale="logarithmic">Logarithmic</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
+        </form>
         <div class="graph"></div>
         <p class="lastupdate"></p>
         <p class="credits"><small><a href="https://www.jhu.edu/" target="_blank">Data from Johns Hopkins University</a></small></p>
@@ -47,7 +69,7 @@
             </thead>
         </table>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
