--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
                             <div class="col-6 col-lg-3">
                                 <button class="btnState btn btn-outline-primary" data-state="are active cases" data-file="active">Active</button>
                             </div>
+
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-warning" data-state="are confirmed cases" data-file="percent_confirmed">% pop Confirmed</button>
+                            </div>
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-danger" data-state="are dead" data-file="percent_deaths">% pop Deaths</button>
+                            </div>
+
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-success" data-state="have recovered" data-file="percent_recovered">% pop Recovered</button>
+                            </div>
+
+                            <div class="col-6 col-lg-3">
+                                <button class="btnState btn btn-outline-primary" data-state="are active cases" data-file="percent_active">% pop Active</button>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
